--- a/styles/products.module.css
+++ b/styles/products.module.css
@@ -2,4 +2,6 @@
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(15rem, 1fr));
     grid-gap: 2rem;
+    flex-grow: 1;
+    margin-bottom: 2rem;
 }
