--- a/styles/productPage.module.css
+++ b/styles/productPage.module.css
@@ -3,15 +3,38 @@
     gap: 2rem;
 }
 
-.rating,
+.image {
+    height: 20rem;
+    width: 16rem;
+    position: relative;
+    margin-bottom: 1.5rem;
+}
+
+.title {
+    margin-bottom: 1rem;
+}
+
+
+.rating {
+    color: rgb(0, 151, 106);
+    font-weight: 500;
+    font-size: 1.1rem;
+    margin: .5rem 0;
+}
+
+.delivery {
+    color: rgb(128, 128, 128);
+}
+
 .price {
     font-weight: 500;
-    color: rgb(59, 59, 59);
+    color: rgb(51, 51, 51);
 }
 
 .rating span {
-    color: #000;
-    font-weight: 100;
+    color: rgb(197, 197, 197);
+    font-weight: 500;
+    font-size: 1rem;
 }
 
 .actions {
@@ -36,3 +59,38 @@
     background-color: rgb(0, 194, 120);
     color: rgb(0, 53, 33);
 }
+
+.actions .quantity {
+    border: 1px solid rgb(153, 153, 153);
+    display: flex;
+    height: 3rem;
+    background-color: rgb(230, 230, 230);
+}
+.actions .quantity p{
+    flex-grow: 1;
+    height: 100%;
+    text-align: center;
+    font-size: 1.7rem;
+}
+.actions .quantity button{
+    height: 100%;
+    width: 25%;
+    border: none;
+    background-color: rgb(211, 211, 211);
+    border-right: 1px solid rgb(153, 153, 153);
+    font-size: 2.3rem;
+    cursor: pointer;
+    transition: all .3s ease-in-out;
+}
+.actions .quantity button:hover,
+.actions .quantity button:active{
+    background-color: rgb(179, 179, 179);
+}
+
+.actions .quantity button:last-child{
+    border: none;
+    border-left: 1px solid rgb(153, 153, 153);
+    font-size: 1.7rem;
+
+}
+
