--- a/styles/navBar.module.css
+++ b/styles/navBar.module.css
@@ -45,3 +45,9 @@
     font-weight: 500;
     cursor: pointer;
 }
+.cart sup {
+    background-color: rgb(53, 53, 53);
+    color: rgb(255, 255, 255);
+    padding: 0rem .3rem;
+    border-radius: 50%;
+}
