--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,3 +23,9 @@ main {
   padding: 2rem;
   padding-bottom: 0;
 }
+
+.muted {
+  color: rgb(197, 197, 197);
+    font-weight: 500;
+    font-size: 1rem;
+}
