--- a/styles/productPage.module.css
+++ b/styles/productPage.module.css
@@ -1,15 +1,21 @@
 .page {
     display: flex;
+    flex-wrap: wrap;
     gap: 2rem;
+    margin-right: 5vw;
 }
 
 .image {
-    height: 20rem;
-    width: 16rem;
-    position: relative;
+    height:100%;
+    width: 20rem;
     margin-bottom: 1.5rem;
 }
-
+.info {
+    max-width: 40rem;
+}
+.info, .actions {
+    padding-top: 2rem;
+}
 .title {
     margin-bottom: 1rem;
 }
@@ -36,12 +42,12 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    max-width: 15rem;
 }
 
 .btn {
     cursor: pointer;
     padding: .5rem 2rem;
-    width: 13rem;
     border: 2px solid rgb(102, 10, 177);
     background-color: rgb(166, 57, 255);
     color: rgb(24, 0, 44);
@@ -89,3 +95,7 @@
 
 }
 
+.description {
+    font-size: 1.2rem;
+    color: rgb(73, 73, 73);
+}
